Fixed bug with rendering issues in safari

--- a/build.gradle
+++ b/build.gradle
@@ -70,12 +70,15 @@ task unzip(type: Copy) {
   into file("${buildDir}")
 }
 
-task customSwaggerUI(type: Copy) {
-  from("${projectDir}/src/web/js/springfox.js")
-  into("${buildDir}/${swaggerUiExplodedDir}")
-}
-
-task removeHtmlIndex(type: Delete) {
+task customizeSwaggerUi << {
+  copy {
+    from("${projectDir}/src/web/js/springfox.js")
+    into("${buildDir}/${swaggerUiExplodedDir}")
+  }
+  copy {
+    from("${projectDir}/src/web/fonts")
+    into("${buildDir}/${swaggerUiExplodedDir}/fonts")
+  }
   delete "${buildDir}/${swaggerUiExplodedDir}/index.html"
   delete "${buildDir}/${swaggerUiExplodedDir}/swagger-ui.js"
 }
@@ -119,7 +122,6 @@ task cleanup(type: Delete) {
 }
 
 clean.dependsOn(cleanup)
-compileJava.dependsOn(removeHtmlIndex)
-removeHtmlIndex.dependsOn(customSwaggerUI)
-customSwaggerUI.dependsOn(unzip)
+compileJava.dependsOn(customizeSwaggerUi)
+customizeSwaggerUi.dependsOn(unzip)
 unzip.dependsOn(swaggerUiDownload)
