--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ plugins {
 
 description = 'A swagger-ui mod that supports rfc6570 compliant urls'
 group = 'io.springfox.ui'
-version = '0.9.8-SNAPSHOT'
+version = '0.9.8'
 
 apply plugin: 'java'
 apply plugin: 'idea'
